# job-anxiety

./: .env.example  .gitignore  README.md  docker-compose.yml  jobanxiety-brand-guide.md  jobanxiety-content-guide.md  render.yaml  research-protocol.md
.github/workflows/: ci.yml  newsletter-draft.yml
backend/: drizzle.config.ts  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
scraper/: README.md  pyproject.toml  requirements.txt
scraper/data/: company_overrides.json  fortune500.json
scraper/job_anxiety_scraper/: __init__.py  __main__.py
scraper/reframe_scraper/: __init__.py  __main__.py
scraper/src/: __init__.py
scraper/src/job_anxiety_scraper/: __init__.py  __main__.py  models.py  pipeline.py
scraper/src/job_anxiety_scraper/categorizer/: __init__.py  llm_fallback.py
scraper/src/job_anxiety_scraper/enrichment/: __init__.py  classifier.py
scraper/src/job_anxiety_scraper/scrapers/: ashby.py  base.py
scraper/src/reframe_scraper/: __init__.py  pipeline.py
scraper/src/reframe_scraper/categorizer/: rules.py
scraper/src/reframe_scraper/enrichment/: crunchbase.py  fortune500.py
scraper/src/reframe_scraper/scrapers/: __init__.py  base.py  career_page.py  greenhouse.py  lever.py  workday.py
scraper/tests/: test_base_scraper.py  test_categorizer.py  test_enrichment.py
scripts/: create-market-brief-draft.mjs
shared/: live-layoffs.ts  occupation-risk.ts  types.ts
(+89 files in other folders)
